# qxmpp

./: .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  metainfo.yaml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
cmake/: ECMInstalledLibraryCheck.cmake
doc/: doap.xml
docs/: CMakeLists.txt  Doxyfile.in  Doxyfile.local  RELEASING.md  classes.qdoc  doap.xml  global.qdoc  groups.qdoc  index.doc  index.qdoc  qxmpp.qdocconf  using.qdoc  xep.qdoc
docs/doap-rendering/: README.md
examples/: CMakeLists.txt
examples/audio_call/: AudioCall.cpp  CMakeLists.txt
examples/example_1a_echoClientOmemo/: README  example_1a_echoClientOmemo.cpp  example_1a_echoClientOmemo.h
examples/example_2_rosterHandling/: example_2_rosterHandling.cpp
examples/example_3_transferHandling/: example_3_transferHandling.cpp
examples/example_8_server/: example_8_server.cpp
examples/muc_bot/: muc_bot.cpp
src/: CMakeLists.txt
src/base/: Algorithms.h  Async.h  Crypto.cpp  Crypto.h  Enums.h  Global.h  Iq.h  Ping.h  QXmppArchiveIq.cpp  QXmppArchiveIq.h  QXmppAsync_p.h  QXmppBindIq.cpp  QXmppBindIq.h  QXmppBitsOfBinary.cpp  QXmppBitsOfBinaryData.h  QXmppBitsOfBinaryDataList.h  QXmppBitsOfBinaryIq.h  QXmppBookmarkSet.cpp  QXmppBookmarkSet.h  QXmppByteStreamIq.cpp  QXmppByteStreamIq.h  QXmppColorGeneration.cpp  QXmppColorGeneration.h  QXmppConstants_p.h  QXmppContactAddresses.cpp  QXmppContactAddresses.h  QXmppDataForm.cpp  QXmppDataForm.h  QXmppDataFormBase.cpp  QXmppDataFormBase.h  QXmppDiscoveryIq.cpp  QXmppDiscoveryIq.h  QXmppDiscoveryIq_p.h  QXmppE2eeMetadata.h  QXmppElement.cpp  QXmppEncryptedFileSource.cpp  QXmppEncryptedFileSource.h  QXmppEntityTimeIq.cpp  QXmppEntityTimeIq.h  QXmppError.cpp  (+151 more)
src/base/packets/: Bind.h  (+8 more)
src/client/: GstWrapper.h  IqSending.h  QXmppAccountMigrationManager.cpp  QXmppAccountMigrationManager.h  QXmppArchiveManager.cpp  QXmppArchiveManager.h  QXmppAtmManager.cpp  QXmppAtmManager.h  QXmppAtmTrustMemoryStorage.cpp  QXmppAtmTrustMemoryStorage.h  QXmppAtmTrustStorage.cpp  QXmppAttentionManager.cpp  QXmppAttentionManager.h  QXmppAuthenticationError.h  QXmppBindError.h  QXmppBlockingManager.cpp  QXmppBlockingManager.h  QXmppBookmarkManager.cpp  QXmppBookmarkManager.h  QXmppCall.cpp  QXmppCall.h  QXmppCallInviteManager.cpp  QXmppCallInviteManager.h  QXmppCallManager.cpp  QXmppCallManager.h  QXmppCallManager_p.h  QXmppCallStream.cpp  QXmppCallStream_p.h  QXmppCall_p.h  QXmppCarbonManager.cpp  QXmppCarbonManager.h  QXmppCarbonManagerV2.cpp  QXmppCarbonManagerV2.h  QXmppClient.cpp  QXmppClient.h  QXmppClientExtension.cpp  QXmppClientExtension.h  QXmppClient_p.h  QXmppConfiguration.cpp  QXmppConfiguration.h  (+80 more)
src/omemo/: CMakeLists.txt  Omemo0Data.cpp  Omemo0Data.h  OmemoCryptoProvider.cpp  OmemoLibWrappers.h  QXmppOmemoData.cpp  QXmppOmemoDeviceBundle_p.h  QXmppOmemoDeviceElement_p.h  QXmppOmemoDeviceList_p.h  QXmppOmemoIq_p.h  QXmppOmemoManager.cpp  QXmppOmemoManager.h  QXmppOmemoManager_p.cpp  QXmppOmemoManager_p.h  QXmppOmemoMemoryStorage.cpp  QXmppOmemoMemoryStorage.h  QXmppOmemoStorage.cpp  QXmppOmemoStorage.h  README.md
src/server/: QXmppDialback.cpp  QXmppDialback.h  QXmppIncomingClient.cpp  QXmppIncomingClient.h  QXmppIncomingServer.cpp  QXmppIncomingServer.h  QXmppOutgoingServer.cpp  QXmppOutgoingServer.h  QXmppPasswordChecker.cpp  QXmppPasswordChecker.h  QXmppServer.cpp  QXmppServer.h  QXmppServerExtension.cpp  QXmppServerExtension.h  QXmppServerPlugin.h
tests/: CMakeLists.txt  IntegrationTesting.h  TestClient.cpp  TestClient.h  TestPasswordChecker.cpp  TestPasswordChecker.h  tst_QXmppAccountMigrationManager.cpp  tst_QXmppAttentionManager.cpp  tst_QXmppBitsOfBinary.cpp  tst_QXmppBlockingManager.cpp  tst_QXmppCallInviteManager.cpp  tst_QXmppCallManager.cpp  tst_QXmppCarbonManager.cpp  tst_QXmppClient.cpp  tst_QXmppDataForm.cpp  tst_QXmppDiscoveryManager.cpp  tst_QXmppEntityTimeManager.cpp  tst_QXmppExternalServiceDiscoveryManager.cpp  tst_QXmppFileEncryption.cpp  tst_QXmppHttpUploadManager.cpp  tst_QXmppIceConnection.cpp  tst_QXmppIq.cpp  tst_QXmppJingleData.cpp  tst_QXmppJingleMessageInitiationManager.cpp  tst_QXmppLogger.cpp  tst_QXmppMamManager.cpp  tst_QXmppMessage.cpp  tst_QXmppMessageReaction.cpp  tst_QXmppMessageReceiptManager.cpp  tst_QXmppMiscData.cpp  tst_QXmppMix.cpp  tst_QXmppMixInvitation.cpp  tst_QXmppMixIq.cpp  tst_QXmppMixItems.cpp  tst_QXmppMixManager.cpp  tst_QXmppMovedManager.cpp  tst_QXmppMuc.cpp  tst_QXmppOmemo0Data.cpp  tst_QXmppOmemoData.cpp  tst_QXmppOmemoManager.cpp  (+54 more)
tests/qxmppaccountmigrationmanager/: tst_qxmppaccountmigrationmanager.cpp
tests/qxmppatmmanager/: tst_qxmppatmmanager.cpp
tests/qxmppcallinvitemanager/: tst_qxmppcallinvitemanager.cpp
tests/qxmppcallmanager/: tst_qxmppcallmanager.cpp
tests/qxmppclient/: tst_qxmppclient.cpp
tests/qxmppdiscoveryiq/: tst_qxmppdiscoveryiq.cpp
tests/qxmppdiscoverymanager/: tst_qxmppdiscoverymanager.cpp
tests/qxmpphttpuploadmanager/: CMakeLists.txt
tests/qxmppiq/: tst_qxmppiq.cpp
tests/qxmppjingledata/: tst_qxmppjingledata.cpp
tests/qxmppjinglemessageinitiationmanager/: tst_qxmppjinglemessageinitiationmanager.cpp
tests/qxmppmammanager/: tst_qxmppmammanager.cpp
tests/qxmppmessage/: tst_qxmppmessage.cpp
tests/qxmppmixmanager/: tst_qxmppmixmanager.cpp
tests/qxmppmovedmanager/: tst_qxmppmovedmanager.cpp
tests/qxmppmuc/: tst_qxmppmuc.cpp
tests/qxmppomemomanager/: tst_qxmppomemomanager.cpp
tests/qxmpppresence/: tst_qxmpppresence.cpp
tests/qxmppregistrationmanager/: tst_qxmppregistrationmanager.cpp
tests/qxmppsasl/: tst_qxmppsasl.cpp
tests/qxmppstanza/: tst_qxmppstanza.cpp
tests/qxmppstream/: tst_qxmppstream.cpp
tests/qxmppstreamfeatures/: tst_qxmppstreamfeatures.cpp
tests/qxmpptransfermanager/: CMakeLists.txt  tst_qxmpptransfermanager.cpp
tests/qxmppuserlocationmanager/: tst_qxmppuserlocationmanager.cpp
tests/qxmpputils/: CMakeLists.txt
tests/travis/: build-and-test
utils/: push-docs.yml  upload-release.sh
utils/ci/: macos-craft-base.yml  macos-craft-x86-64.yml
(+3 files in other folders)
